<resources>
    <!-- App Name -->
    <string name="app_name">Anime King</string>

    <!-- Screen Name -->
    <string name="connect_with_facebook">Connect With Facebook</string>
    <string name="connect_with_google">Connect with Google</string>

    <!-- Anime Image Content Description -->
    <string name="anime_image">Anime Image</string>

    <!-- Auth Screen -->
    <string name="by_continuing_you_agree_to_terms">By continuing, you agree to our <a href="https://www.termsfeed.com/live/601157d7-7ff6-4663-b68f-a5c6dc34973c">Terms of Use</a> and <a href="https://www.termsfeed.com/live/38f1f4a2-1204-4980-8248-f31d3a4fa801">Privacy Policy</a>.</string>

    <!-- Anime List Layout -->
    <string name="new_user">New Around Here?</string>
    <string name="play">Play</string>
    <string name="practice">Practice</string>
    <string name="skills_in_action">Put your skills in action!</string>
    <string name="go_on_adventure">Let\'s go on an adventure!</string>
    <string name="alchemy_wizards">Alchemy, wizards and fairies!</string>
    <string name="goofy_lovable">Goofy but lovable trivia</string>
    <string name="budding_romance">Budding romance trivia</string>
    <string name="potato_chip">I\'ll take a potato chip…</string>
    <string name="dark_anime">Dark anime trivia</string>
    <string name="everything_mecha">Everything mecha!</string>
    <string name="classical_anime">Classical anime trivia</string>
    <string name="server_down_sorry">Network issue. Sorry :-(</string>
    <string name="give_us_a_second">Make sure you\'re connected to the internet.</string>


    <!-- Anime Detail Layout -->
    <string name="take_quiz">Take Quiz</string>
    <string name="anime_title">Anime Title</string>
    <string name="single_player">Single Player</string>
    <string name="multi_player">Multiplayer</string>
    <string name="join_community">Join Community</string>
    <string name="question_count">0 questions</string>
    <string name="ask_question">Ask Question</string>
    <string name="coming_soon">Coming Soon!</string>
    <string name="number_questions">%1$s questions</string>

    <!-- Not Enough Questions -->
    <string name="insufficient_questions">Uh oh! We can\'t find enough questions. A minimum of 10 questions is necessary to play. Help us out by asking a question!</string>
    <string name="add_questions">Add More Questions</string>


    <!-- Answer Question Layout -->
    <string name="time_up">Time Up!</string>
    <string name="next_question">Next Question</string>
    <string name="got_the_hang_of_it">You\'ve got the hang of it! Visit an anime community for more targeted questions.</string>
    <string name="score">Score</string>
    <string name="current_question">Question %1$d</string>

    <!-- Ask Question Layout -->
    <string name="enter_question">Don\'t be shy. Ask a question!</string>
    <string name="submit_question">Submit</string>
    <string name="wrong_choice">Wrong Choice</string>
    <string name="correct_choice">Correct Choice</string>
    <string name="fix_answer_choice">Enter 1+ character for answer choice.</string>
    <string name="question_min">Enter 12+ characters for question.</string>
    <string name="accept">Accept</string>

    <!-- View Results Layout -->
    <string name="game_over">Game Over</string>
    <string name="good_game">Good Game!</string>
    <string name="try_again">Try Again</string>
    <string name="quit_game">Return Home</string>
    <string name="review_correct_choice">Correct: %1$s</string>
    <string name="questions_correct_count">%1$d out of %2$d questions correct!</string>
    <string name="questions_correct">%1$d questions correct!</string>
    <string name="total_time_bonus">%1$d pts</string>
    <string name="total_points">%1$d pts</string>
    <string name="review_share_questions">Review Questions</string>
    <string name="lost_quote">\"Remember the lesson, not the disappointment\"\n-Holo the Wise Wolf</string>
    <string name="won_quote">\"He who strikes first wins!\"\n-L Lawliet</string>
    <string name="done">Done</string>
    <string name="exit_game">Exit Game</string>
    <string name="play_again">Play Again</string>
    <string name="to_level_up">to level up</string>
    <string name="quiz_score">Quiz Score</string>
    <string name="high_score_bonus">High Score Bonus</string>
    <string name="power_up_bonus">Power Up Bonus</string>
    <string name="time_bonus">Time Bonus</string>

    <!-- Profile Layout -->
    <string name="communities">Communities</string>
    <string name="points">Total Points</string>
    <string name="questions">Questions</string>
    <string name="correct">Correct</string>
    <string name="crowns">Crowns</string>
    <string name="my_communities">My Communities</string>
    <string name="edit_profile">Edit Profile</string>

    <!-- Settings Layout -->
    <string name="language">Language</string>
    <string name="sound_effects">Sound Effects</string>
    <string name="vibration">Vibration</string>
    <string name="in_game_music">In-Game Music</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="about">Credit</string>
    <string name="sign_out">Sign Out</string>
    <string name="legal">Legal</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="basic">Basic</string>
    <string name="other">Other</string>
    <string name="vibration_summary">Incorrect response feedback</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="privacy">Privacy</string>


    <!-- Bottom Navigation Layout -->
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>

    <!-- Splash Layout -->
    <string name="slogan">Pick your anime. \nClaim your crown.</string>
    <string name="credits_author">Clarmoph Games</string>

    <!-- Search Layout -->
    <string name="search_for_anime">Search for anime</string>
    <string name="cancel">Cancel</string>

    <!-- Facebook social login -->
    <string name="facebook_app_id">1847601048710162</string>
    <string name="fb_login_protocol_scheme">fb1847601048710162</string>

    <!-- User Shared Preference -->
    <string name="user_joined_community">user_joined_community</string>

    <string name="web_client_id">738121527329-afu8qdo00r239gnqilne2jp4721urvf2.apps.googleusercontent.com</string>

    <string name="sound_effects_enabled">sound_effects_enabled</string>
    <string name="game_music_enabled">game_music_enabled</string>
    <string name="dark_theme_enabled">dark_theme_enabled</string>

    <string name="credits">Credits</string>
    <string name="credit_source">Crown made by Freepik from www.flaticon.com</string>
    <string name="credits_audio">Sound effects obtained from www.zapsplat.com</string>
    <string name="community">Community</string>
    <string name="credit_radar">Airplane animation by Mark Geyer at lottiefiles.com</string>
    <string name="credit_loading_animation">Loading animation by zhejun bao at lottiefiles.com</string>
    <string name="credits_error_loading_anim">Error animation by Сергій Корсак at lottiefiles.com</string>


    <string name="not_enough_description">Each community requires at least 5 questions.\nAdd more questions to play trivia with this anime.</string>
    <string name="not_enough_questions">Not Enough Questions</string>
    <string name="title">Title Not Available</string>
    <string name="facec_splash" translatable="false">Face splash</string>
    <string name="dummy_text" translatable="false">Fullmetal Alchemist is the best title of all time. Fullmetal Alchemist is the best title of all time</string>
    <string name="testing_text" translatable="false">This is a test question. Use it to determine how the design would look. Maybe we need to add some redesigns? I don\'t know, we\'ll have to see. I don\'t know, we\'ll have to see. I don\'t know, we\'ll have to see.I don\'t know. know. kn</string>
    <string name="actual_text_testing" translatable="false">Here is a little sample text for testing purposes. Come again soon.</string>
    <string name="connect_internet">Please connect to the internet.</string>
    <string name="image_detail_description" translatable="false">image detail description</string>
    <string name="return_home">Return Home</string>
    <string name="exit_quiz">Exit Quiz</string>
    <string name="_0">0</string>
    <string name="pick_your_anime">Pick your anime</string>
    <string name="claim_your_crown">Claim your crown</string>
    <string name="back">Back</string>

</resources>
