<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.auth.LoginFragment">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerInside"
        android:src="@drawable/demon_slayer"
        app:layout_constraintDimensionRatio="w,3:2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/header_frame_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/auth_frame"
        android:foreground="@drawable/auth_frame_layer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/auth_logo_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableTop="@drawable/ic_anime_king_login"
        android:text="@string/connect_internet"
        android:textAlignment="center"
        android:textColor="@color/color_white"
        android:textSize="@dimen/_19sdp"
        app:layout_constraintBottom_toBottomOf="@+id/progressBar5"
        app:layout_constraintEnd_toEndOf="@+id/header_frame_view"
        app:layout_constraintStart_toStartOf="@+id/header_frame_view"
        app:layout_constraintTop_toTopOf="@+id/progressBar5" />

    <ProgressBar
        android:id="@+id/progressBar5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar5" />

    <!--Give credit to artist-->
    <Button
        android:id="@+id/facebook_login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/facebook_background_button"
        android:drawableStart="@drawable/facebook_logo_icon"
        android:text="@string/connect_with_facebook"
        android:textColor="@color/color_white"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/progressBar6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/progressBar6" />

    <Button
        android:id="@+id/google_login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/google_bg_button"
        android:drawableStart="@drawable/icon_google"
        android:text="@string/connect_with_google"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_13sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/facebook_login_button"
        app:layout_constraintStart_toStartOf="@+id/facebook_login_button"
        app:layout_constraintTop_toBottomOf="@+id/facebook_login_button" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/bahnscrift"
        android:text="@string/credits_author"
        android:textAlignment="center"
        android:textColor="@color/color_white"
        android:textStyle="bold"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>