<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".view.communityQuestions.LowQuestionCount">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_low_questions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@android:style/ThemeOverlay.Material.Light"
        android:translationZ="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Add More Questions"
        app:titleTextAppearance="@style/TextAppearance.TabsFont" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_not_enough"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:layout_constraintBottom_toTopOf="@+id/button_transition_ask_question"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/not_enough"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:drawableTop="@drawable/ic_box"
            android:fontFamily="@font/baloobhairegular"
            android:text="@string/not_enough_questions"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/not_enough_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/not_enough"
            android:layout_marginTop="@dimen/margin_regular"
            android:fontFamily="@font/baloobhairegular"
            android:text="@string/not_enough_description"
            android:textAlignment="center"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/not_enough" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/button_transition_ask_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/layout_not_enough"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorAccent"
        android:fontFamily="@font/baloobhairegular"
        android:text="@string/ask_question"
        android:textColor="@color/color_grey"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_not_enough" />

</androidx.constraintlayout.widget.ConstraintLayout>