<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.home.Credits">
    <!--NOTE: Use theme instead of style when changing toolbar text/back arrow color-->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_credits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@android:style/ThemeOverlay.Material.Light"
        android:translationZ="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Credits"
        app:titleTextAppearance="@style/TextAppearance.TabsFont" />

    <androidx.cardview.widget.CardView
        android:id="@+id/crown_credit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:elevation="15dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@+id/credits_empty_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_credits">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autoLink="web"
            android:drawableTop="@drawable/ic_crownlogo"
            android:drawablePadding="15dp"
            android:padding="15dp"
            android:text="@string/credit_source"
            android:textColorLink="@color/color_grey" />

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/credits_empty_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:elevation="15dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@+id/credits_audio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crown_credit">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autoLink="web"
            android:drawableTop="@drawable/ic_box"
            android:drawablePadding="15dp"
            android:padding="15dp"
            android:text="@string/credit_source"
            android:textColorLink="@color/color_grey" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/credits_audio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:elevation="15dp"
        android:padding="15dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_credits_author"
        app:layout_constraintEnd_toEndOf="@id/credits_empty_box"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/credits_empty_box"
        app:layout_constraintTop_toBottomOf="@+id/credits_empty_box">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autoLink="web"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/credits_audio"
            android:textAlignment="center"
            android:textColorLink="@color/color_grey" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_credits_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:fontFamily="@font/bahnscrift"
        android:gravity="center"
        android:text="@string/credits_author"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>