<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/quiz_motion_scene"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_home_logo_update"
    app:applyMotionScene="true"
    app:showPaths="true"
    tools:context=".view.community.questions.answer_question.AnswerQuestion">

    <ProgressBar
        android:id="@+id/timer_progressbar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:backgroundTint="@color/color_darkish_green"
        android:indeterminate="false"
        android:max="10"
        android:progress="10"
        android:progressBackgroundTint="@color/color_home_logo_update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/ic_hourglass"
        android:fontFamily="@font/baloobhairegular"
        android:gravity="bottom"
        android:textColor="@color/color_white"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="@+id/button_choice_one"
        app:layout_constraintTop_toBottomOf="@+id/timer_progressbar"
        tools:text="07" />

    <TextView
        android:id="@+id/tv_score_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/quiz_score_bg"
        android:fontFamily="@font/baloobhairegular"
        android:gravity="bottom"
        android:text="@string/score"
        android:textColor="@color/color_white"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintEnd_toStartOf="@+id/tv_score"
        app:layout_constraintTop_toBottomOf="@+id/timer_progressbar" />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloobhairegular"
        android:gravity="bottom"
        android:text="@string/_0"
        android:textColor="@color/color_white"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_score_tag"
        app:layout_constraintEnd_toEndOf="@+id/button_choice_one"
        app:layout_constraintTop_toTopOf="@+id/tv_score_tag" />

    <TextView
        android:id="@+id/tv_answer_question"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/baloobhairegular"
        android:gravity="center"
        android:text="@string/actual_text_testing"
        android:textAlignment="center"
        android:textColor="@color/color_white"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/progressBar_two"
        app:layout_constraintEnd_toEndOf="@+id/button_choice_one"
        app:layout_constraintStart_toStartOf="@+id/button_choice_one"
        app:layout_constraintTop_toBottomOf="@+id/tv_timer"
        tools:text="@string/testing_text" />

    <Button
        android:id="@+id/button_choice_one"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/answer_question_background"
        android:fontFamily="@font/baloobhairegular"
        android:textAlignment="center"
        android:textColor="@color/color_white"
        android:textSize="@dimen/_13sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_answer_question"
        tools:text="Answer Choice 1" />

    <Button
        android:id="@+id/button_choice_two"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/answer_question_background"
        android:fontFamily="@font/baloobhairegular"
        android:textAlignment="center"
        android:textColor="@color/color_white"
        android:textSize="@dimen/_13sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_choice_one"
        tools:text="Answer Choice 2" />

    <Button
        android:id="@+id/button_choice_three"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/answer_question_background"
        android:fontFamily="@font/baloobhairegular"
        android:textAlignment="center"
        android:textColor="@color/color_white"
        android:textSize="@dimen/_13sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_choice_two"
        tools:text="Answer Choice 3" />

    <Button
        android:id="@+id/button_choice_four"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/answer_question_background"
        android:fontFamily="@font/baloobhairegular"
        android:textAlignment="center"
        android:textColor="@color/color_white"
        android:textSize="@dimen/_13sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_choice_three"
        tools:text="Answer Choice 4" />

    <Button
        android:id="@+id/button_next_question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_next_question"
        android:fontFamily="@font/baloobhairegular"
        android:text="@string/next_question"
        android:textAlignment="center"
        android:textColor="@color/color_black_dark"
        android:textSize="@dimen/_13sdp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_choice_four" />

    <ProgressBar
        android:id="@+id/progressBar_ask_question"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar_two"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/progressBar_ask_question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/profile_bottomnav_placeholder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>